# insights

./: .gitignore  LICENSE  README.md
.github/workflows/: backend.yml  frontend.yml
backend/: pyproject.toml  requirements.txt
backend/aitw/: cli.py
backend/aitw/archive/: archive.py
backend/aitw/database/: connection.py  pull_request.py  pull_request_ingestor.py  repository.py  repository_ingestor.py
backend/aitw/insights/: binned.py  change_language.py  daily.py  insight.py  insights.py  language.py  overview.py
backend/aitw/scrape/: job.py  logging.py  manager.py  pr_classifier.py  scraper.py  worker.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: bar_chart.tsx  cite_us.tsx  dashboard.tsx  insight_chart.tsx  overview_table.tsx
frontend/components/ui/: chart.tsx
frontend/lib/: agents.ts  db.ts  types.ts
frontend/types/: agent_overview.ts
