[project]
name = "aitw"
version = "0.1.0"
description = "Agents in the Wild"
readme = ""
requires-python = ">=3.12"
license = { text = "MIT" }

[project.scripts]
aitw = "aitw.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
exclude = 'grave/*'
ignore_missing_imports = true
check_untyped_defs = true